; ModuleID = '/home/carl/AnghaBench/postgres/src/test/regress/extr_regress.c_test_atomic_flag.c'
source_filename = "/home/carl/AnghaBench/postgres/src/test/regress/extr_regress.c_test_atomic_flag.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (void ()* @test_atomic_flag to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @test_atomic_flag() #0 {
  %1 = alloca i32, align 4
  %2 = call i32 @pg_atomic_init_flag(i32* %1)
  %3 = call i32 @pg_atomic_unlocked_test_flag(i32* %1)
  %4 = call i32 @EXPECT_TRUE(i32 %3)
  %5 = call i32 @pg_atomic_test_set_flag(i32* %1)
  %6 = call i32 @EXPECT_TRUE(i32 %5)
  %7 = call i32 @pg_atomic_unlocked_test_flag(i32* %1)
  %8 = icmp ne i32 %7, 0
  %9 = xor i1 %8, true
  %10 = zext i1 %9 to i32
  %11 = call i32 @EXPECT_TRUE(i32 %10)
  %12 = call i32 @pg_atomic_test_set_flag(i32* %1)
  %13 = icmp ne i32 %12, 0
  %14 = xor i1 %13, true
  %15 = zext i1 %14 to i32
  %16 = call i32 @EXPECT_TRUE(i32 %15)
  %17 = call i32 @pg_atomic_clear_flag(i32* %1)
  %18 = call i32 @pg_atomic_unlocked_test_flag(i32* %1)
  %19 = call i32 @EXPECT_TRUE(i32 %18)
  %20 = call i32 @pg_atomic_test_set_flag(i32* %1)
  %21 = call i32 @EXPECT_TRUE(i32 %20)
  %22 = call i32 @pg_atomic_clear_flag(i32* %1)
  ret void
}

declare dso_local i32 @pg_atomic_init_flag(i32*) #1

declare dso_local i32 @EXPECT_TRUE(i32) #1

declare dso_local i32 @pg_atomic_unlocked_test_flag(i32*) #1

declare dso_local i32 @pg_atomic_test_set_flag(i32*) #1

declare dso_local i32 @pg_atomic_clear_flag(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
